# pulsate

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE.md  RELEASING.md  SECURITY-AUDIT.md  SECURITY.md  deny.toml  mise.toml  release-plz.toml  rust-toolchain.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  release-binaries.yml  release-plz.yml  release.yml
crates/p8/: Cargo.toml
crates/p8/src/: lib.rs  main.rs
crates/pulsate/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-acme/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-acme/src/: ca.rs  client.rs  jose.rs  lib.rs  transport.rs
crates/pulsate-cache/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-cache/src/: lib.rs
crates/pulsate-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-cli/src/: lib.rs  ui.rs  up.rs
crates/pulsate-cluster/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-cluster/src/: lib.rs
crates/pulsate-cluster/src/gossip/: mod.rs  wire.rs
crates/pulsate-cluster/tests/: gossip.rs
crates/pulsate-config/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-config/src/: compile.rs  lib.rs  model.rs  router.rs  store.rs
crates/pulsate-control/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/pulsate-control/proto/: admin.proto
crates/pulsate-control/src/: grpc.rs  json.rs  lib.rs  serve.rs
crates/pulsate-core/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-core/src/: context.rs  error.rs  lib.rs  lifecycle.rs  message.rs  snapshot.rs  traits.rs
crates/pulsate-dashboard/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-dashboard/src/: index.html  lib.rs
crates/pulsate-flow/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-flow/src/: ast.rs  diag.rs  lexer.rs  lib.rs  parser.rs  span.rs  value.rs
crates/pulsate-http/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-http/src/: gateway.rs  handlers.rs  lib.rs  serve.rs
crates/pulsate-http/tests/: serve_http.rs
crates/pulsate-http3/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-http3/src/: dispatch.rs  lib.rs  server.rs
crates/pulsate-http3/tests/: loopback.rs
crates/pulsate-k8s/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-k8s/src/: controller.rs  crd.rs  error.rs  leader.rs  lib.rs  translate.rs
crates/pulsate-k8s/tests/: golden.rs
crates/pulsate-migrate/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-migrate/src/: apache.rs  caddy.rs  haproxy.rs  lib.rs  nginx.rs
crates/pulsate-net/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-net/src/: lib.rs
crates/pulsate-observe/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-observe/src/: ids.rs  lib.rs  log.rs  metrics.rs
crates/pulsate-pipeline/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-pipeline/src/: lib.rs
crates/pulsate-plugin/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-plugin/src/: lib.rs
crates/pulsate-proxy/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-proxy/src/: forward.rs  lib.rs
crates/pulsate-router/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-router/src/: lib.rs
crates/pulsate-rt/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-rt/src/: lib.rs  net.rs
crates/pulsate-sdk/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-sdk/src/: lib.rs
crates/pulsate-secrets/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-secrets/src/: lib.rs
crates/pulsate-test/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-test/src/: lib.rs
crates/pulsate-tls/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-tls/src/: lib.rs
crates/pulsate-util/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-util/src/: lib.rs  parse.rs  pool.rs
crates/pulsate-waf/: CHANGELOG.md  Cargo.toml  README.md
crates/pulsate-waf/src/: cidr.rs  lib.rs
crates/pulsate/src/: lib.rs
deploy/kubernetes/: README.md  deployment.yaml  gateway.yaml
docs/: 01-vision.md  02-architecture.md  03-repository.md  04-configuration.md  05-http-stack.md  06-reverse-proxy.md  07-middleware.md  08-cache.md  09-security.md  10-performance.md  11-dashboard.md  12-plugins.md  13-cli.md  14-developer-experience.md  15-observability.md  16-deployment.md  17-documentation.md  18-open-source.md  19-milestones.md  20-future.md  21-threat-model.md  22-admin-api.md  23-data-and-state-model.md  24-architecture-decision-records.md  25-error-and-status-catalog.md  26-metrics-and-slo-catalog.md  27-config-reference.md  28-testing-and-conformance.md  29-multi-tenancy-and-isolation.md  30-migration-and-import.md  31-benchmarking-and-tuning.md  32-disaster-recovery-and-ha.md  33-release-engineering-and-supply-chain.md  README.md
docs/migrating/: README.md  from-apache.md  from-caddy.md  from-haproxy.md  from-nginx.md  from-thruster.md  from-traefik.md
examples/: broken.flow  gateway.flow  microservices.flow  proxy.flow  quickstart.flow  spa-api.flow  static.flow
examples/frameworks/: README.md  django.flow  express.flow  fastapi.flow  go.flow  laravel.flow  nextjs.flow  phoenix.flow  rails.flow  spring-boot.flow  sveltekit.flow
examples/import/: nginx.conf
examples/plugins/: doubler.wat
examples/webroot/: index.html
packaging/: pulsate.flow
packaging/homebrew/: pulsate.rb
packaging/systemd/: pulsate.service
scripts/: install.ps1  install.sh
xtask/: Cargo.toml
xtask/src/: main.rs
