[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Workspace dev automation: layering lint, code catalog, dist (cargo-xtask pattern)."
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap.workspace = true

[lints]
workspace = true
