[package]
name = "pulsate-http3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP/3 over QUIC."

[dependencies]
pulsate-core = { path = "../pulsate-core", version = "0.1.0" }
pulsate-rt = { path = "../pulsate-rt", version = "0.1.0" }

[lints]
workspace = true
